# tec-tgcr

./: .dockerignore  .env.example  .gitignore  .md-lint-todo.txt  ARTIST_CONTACT_LIST.md  ATTACHMENT_PROTOCOL_SUMMARY.md  AUTO_SYNCED_KNOWLEDGE_API_COMPLETE.md  CHECKSUMS.md  CLEANUP_SUMMARY.md  CLEAN_SWEEP_ACTION_SUMMARY.md  CODEX_DEPLOYMENT_COMPLETE.md  CODE_OF_CONDUCT.md  COMMIT_SUMMARY.md  CONSOLIDATION_COMPLETE.md  CONTEXT_PACKAGE_SPEC.md  CONTRIBUTING.md  COORDINATION_INTEGRATION.md  COPILOT_STRATEGY.md  COPILOT_SYSTEM_PROMPT.md  DELIVERY_SUMMARY.md  DEPENDENCIES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOY_PHASE_1_NOW.md  Dockerfile  GPT_ATTACHMENT_CHEAT_SHEET.md  GPT_DEPLOYMENT_READY.md  GPT_PERSONAS_ATTACHMENT_DECISION.md  GPT_SYSTEM_PROMPT_READY.txt  KNOWLEDGE_API_GUIDE.md  KNOWLEDGE_API_QUICK_REFERENCE.md  LICENSE  LUMINAI-API-SETUP-GUIDE.md  LUMINAI_FILES_MASTER_INVENTORY.md  LUMINAI_Family_Legacy_Narrative.md  LUMINAI_Feasibility_And_Market_Strategy.md  LUMINAI_SETUP_COMPLETE.md  PERSONAS_CANONICAL_MANIFEST.md  PERSONAS_CONSOLIDATION_REPORT.md  PERSONAS_UNISON_COMPLETE.md  (+26 more)
.devcontainer/: devcontainer.json
.github/: PLATFORM_ARCHITECTURE.md  PLATFORM_UNIFICATION_COMPLETE.md  PROJECT_METADATA.md  PROJECT_README.md  PULL_REQUEST_TEMPLATE.md  WORKFLOW_COORDINATION.md  copilot-instructions.md  copilot-project.yml  project-ids.yml
agents/: README.md
ai-workflow/: README.md  TEC_Copilot365_Notebook.ipynb  lumina_cr_assistant.ipynb  prompt_templates.py
apps/: 3D_ASSETS_SPEC.md  DEPLOYMENT_READY.md  LOCAL_TESTING_GUIDE.md  README.md
(+521 files in other folders)
